# skills

./: .gitignore  .gitmodules  LICENSE  README.md  SKILLS.md  pack_and_install_skill.py  pyproject.toml  pyrightconfig.json
bank-ir-consolidate/: SKILL.md
bank-ir-consolidate/scripts/: _parser_loader.py  consolidate.py  export_model.py  fx_rates.py  merge_categories.py  render_md.py  render_model.py  render_model_io.py
bank-ir-consolidate/tests/: run_consolidate.py  test_fx_rates.py
docx2md/: SKILL.md
docx2md/references/: styling.md
docx2md/scripts/: docx2md.py
docx2md/tests/: run_all.py  test_clean_text.py  test_heading_level.py  test_wrap_inline.py
eddx-translate/: SKILL.md
eddx-translate/scripts/: eddx_translate.py
kb-ingest/: SKILL.md
kb-ingest/scripts/: build_kb.py
meeting-minutes/: SKILL.md
meeting-minutes-export/: SKILL.md
meeting-minutes/references/: minutes_template.md
meeting-minutes/scripts/: fill_minutes.py
pptx-translate/: SKILL.md
pptx-translate/scripts/: extract_text.py  translate_pptx.py
pptx-translate/tests/: conftest.py  test_translate_pptx.py
pptx2md/: SKILL.md
pptx2md/references/: decorative_keywords.txt  styling.md
pptx2md/scripts/: pptx2md.py
pptx2md/tests/: run_all.py
